# ultraspace

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: README.md
data/manuals/: style-guide.md
data/manuals/som/24/: 24-00-00.md  24-00-01.md  24-30-01.md  24-30-02.md  24-30-03.md  24-30-04.md  24-30-05.md
data/manuals/wdm/24/: 24-00-00.md
data/parts/24/: bat-28-40.yaml  cb-10.yaml  cb-5.yaml  ctr-30.yaml  ctr-30b.yaml  load-150w.yaml  load-60w.yaml  pcu-50.yaml  xducer-i.yaml  xducer-soc.yaml  xducer-v.yaml
data/procedures/som/: 24-30-01-power-up.yaml  24-30-02-power-down.yaml  24-30-03-kestrel-power-up.yaml  24-30-04-kestrel-power-down.yaml  24-30-05-kestrel-cross-tie.yaml
data/ships/tb-1/: blueprint.yaml
data/ships/uev-kestrel/: blueprint.yaml
docs/: README.md  glossary.md  vision.md
docs/adr/: 0001-language-and-ui.md  0002-determinism.md  0003-content-format.md  0004-units-policy.md  0005-manual-driven-development.md  0006-diegetic-displays.md  README.md
docs/design/: command-language.md  failure-and-repair.md  game-overview.md  human-element.md  manuals-as-gameplay.md  scenarios-and-campaign.md  ship-systems.md  simulation-depth.md  tech-levels.md  ui-presentation.md
docs/design/systems/: ata-24-eps.md
docs/engineering/: architecture.md  coding-standards.md  data-model.md  simulation-kernel.md  tech-stack.md  testing.md
docs/process/: roadmap.md  workflow.md
docs/process/playtests/: 2026-07-14-m1-vignette.md  TEMPLATE.md
src/ultraspace/: __init__.py  __main__.py
src/ultraspace/content/: __init__.py  generators.py  loader.py  manuals.py  schemas.py
src/ultraspace/interaction/: __init__.py  procedures.py  scl.py
src/ultraspace/kernel/: __init__.py  clock.py  events.py  rng.py  scheduler.py
src/ultraspace/networks/: __init__.py  electrical.py
src/ultraspace/presentation/: __init__.py  teletype.py
src/ultraspace/presentation/tui/: __init__.py  app.py  stations.py  widgets.py
src/ultraspace/ship/: __init__.py  annunciators.py  devices.py  sim.py  telemetry.py
src/ultraspace/testing/: __init__.py
tests/: conftest.py  test_selftest.py
tests/casualties/: test_ata24_eps.py
tests/conformance/: test_som_ch24.py
tests/content/: test_generators.py  test_loader.py  test_manuals.py
tests/determinism/: test_ship_digest.py
tests/interaction/: test_scl.py
tests/invariants/: test_conservation.py
tests/kernel/: test_clock.py  test_events.py  test_rng.py  test_scheduler.py
tests/networks/: test_electrical.py
tests/presentation/: test_teletype.py  test_tui.py
tests/ship/: test_devices.py  test_sim.py
tools/: README.md  check_imports.py  check_units.py  export_binder.py
