[project]
name = "ultraspace"
version = "0.0.1"
description = "ULTRASPACE — the ultra-in-depth spaceship simulation (working title)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "textual>=8.2.8",
]
# Runtime deps stay minimal; the kernel remains stdlib-only. Each entry is on
# the docs/engineering/tech-stack.md adoption schedule: pydantic + PyYAML
# (content pipeline, M1), textual (primary TUI client, M1; ADR-0001).

[project.scripts]
ultraspace = "ultraspace.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "hypothesis>=6.100",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-pyyaml>=6.0.12.20260518",
    "pytest-asyncio>=1.4.0",
    "mkdocs-material>=9.7.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ultraspace"]

# ---------------------------------------------------------------------------
# Lint / format — single-config-file policy (docs/engineering/tech-stack.md)
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pycodestyle/pyflakes
    "I",                # isort
    "N",                # pep8-naming
    "UP",               # pyupgrade
    "B",                # bugbear
    "A",                # builtins shadowing
    "C4",               # comprehensions
    "DTZ",              # naive datetime (determinism-adjacent, ADR-0002)
    "T10",              # leftover debugger calls
    "ISC",              # implicit str concat
    "RET",              # return discipline
    "SIM",              # simplify
    "TID",              # tidy imports + banned APIs (Iron Law enforcement)
    "PTH",              # pathlib
    "PL",               # pylint subset
    "RUF",
]
ignore = [
    "ISC001",   # conflicts with ruff format
    "PLR2004",  # magic values: physics constants and hand-computed test values are cited in comments instead (coding-standards.md)
]

# Iron Law 1 (determinism): no wall clock, no module-level RNG in model code.
# See docs/adr/0002-determinism.md and docs/engineering/coding-standards.md.
[tool.ruff.lint.flake8-tidy-imports.banned-api]
"time".msg = "No wall clock below presentation (ADR-0002). Use the injected SimClock."
"datetime".msg = "No wall time in model code (ADR-0002). Sim time is integer microseconds."
"random".msg = "Use RngHub.stream('domain/entity/purpose') (ADR-0002)."

[tool.ruff.lint.per-file-ignores]
"src/ultraspace/kernel/rng.py" = ["TID251"]  # the one legitimate `random` import
"tests/**" = ["TID251"]                      # tests may use time/random freely

# ---------------------------------------------------------------------------
# Types
# ---------------------------------------------------------------------------

[tool.mypy]
strict = true
python_version = "3.12"
files = ["src", "tests", "tools"]
warn_unreachable = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]

# ---------------------------------------------------------------------------
# Tests
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "slow: excluded from `make check` fast gate",
]
# Textual pilot tests (tests/presentation/test_tui.py) are async by nature.
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
